--- a/tutorial.html
+++ b/tutorial.html
@@ -84,6 +84,57 @@
 			</div>
 		    
 		    
+
+			<div class="resume-body p-5">
+				<ul>
+				  <li>1. Supervised learning
+				  	<ul>
+				  		<li>1.1 Classification 
+				  			<ul>
+						  		<li>1.1.1 Naïve Bayes Classifier Algorithm</li>
+						    	<li>1.1.2 Decision Trees</li>
+						    	<li>1.1.3 Random Forests</li>
+						    	<li>1.1.4 Logistic Regression</li>
+						    	<li>1.1.5 Support Vector Machine Algorithm</li>
+						    	<li>1.1.6 Nearest Neighbours</li>
+						    	<li>1.1.7 Feed Forward Neural Network</li>
+						    </ul>
+				  		</li>
+				  		<li>1.2 Regression 
+				  			<ul>
+				  				<li>1.2.1 Decision Trees</li>
+				  				<li>1.2.2 Random Forests</li>
+				  				<li>1.2.3 Linear Regression</li>
+				  			</ul>
+				  		</li>
+				  		<li>1.3. Forecasting </li>
+				  	</ul>
+				  </li>
+				  <li>2. Unsupervised learning
+				    <ul>
+				    <li>2.1 Clustering 
+				    	<ul>
+				    		<li>2.1.1  K Means Clustering Algorithm</li>
+				    	</ul>
+				    </li>
+				    <li>2.2 Dimension reduction
+				    	<ul>
+				    		<li>Autoencoder
+				    			<p>
+				    				https://github.com/jaydeepchakraborty/NLP/blob/master/AutoEncoder.ipynb
+				    			</p>
+				    		</li>
+				    	</ul>
+				    </li>
+				    </ul>
+				  </li>
+				  <li>3. Semi-supervised learning </li>
+				  <li>4. Reinforcement learning </li>
+				</ul>						
+			</div>
+
+
+
 	    </div>
     </article> 
 </body>
