--- a/tutorial.html
+++ b/tutorial.html
@@ -125,6 +125,9 @@
 					</li>
 					<li>
 						Linear Regression (regression)
+						<p>
+							https://github.com/jaydeepchakraborty/NLP/blob/master/LinearRegressionWithPyTorch.ipynb
+						</p>
 					</li>
 					<li>
 						Support Vector Machine Algorithm (classification, regression)
@@ -144,13 +147,82 @@
 				    	https://github.com/jaydeepchakraborty/NLP/blob/master/AutoEncoder.ipynb
 				    	</p>
 					</li>
+					<li>
+						Recursive Neural Network
+						<ul>
+							<li>
+								Many - to - One (seq - one)
+								<p>
+									https://github.com/jaydeepchakraborty/NLP/blob/master/RNN((seq)%20-_%201).ipynb
+								</p>
+							</li>
+							<li>
+								Many - to - One (seq - one) | padding
+								<p>
+									https://github.com/jaydeepchakraborty/NLP/blob/master/RNN-PAD((seq)%20-_%201).ipynb
+								</p>
+							</li>
+							<li>
+								Many - to - One (seq - one) | attention
+								<p>
+									https://github.com/jaydeepchakraborty/NLP/blob/master/RNN-Attention((seq)%20-_%201).ipynb
+								</p>
+							</li>
+							<li>
+								Many - to - One (seq - one) | padding | attention
+								<p>
+									https://github.com/jaydeepchakraborty/NLP/blob/master/RNN-Attention-PAD((seq)%20-_%201).ipynb
+								</p>
+							</li>
+							<li>
+								Many - to - One (seq - one) | padding | attention | mask
+								<p>
+									https://github.com/jaydeepchakraborty/NLP/blob/master/RNN-Attention-PAD-Mask((seq)%20-_%201).ipynb
+								</p>
+							</li>
+							<li>
+								Many - to - Many (seq - seq) | padding | attention | mask
+								<p>
+									https://github.com/jaydeepchakraborty/NLP/blob/master/RNN-Attention((seq%2C%20seq)%20-_%201).ipynb
+								</p>
+							</li>
+						</ul>
+					</li>
+					<li>
+						Transformer
+						<ul>
+							Basics | Architecture
+							<p>
+								https://github.com/jaydeepchakraborty/NLP/blob/master/Transformer.ipynb
+							</p>
+						</ul>
+						<ul>
+							Many - to - One (seq - one)
+							<p>
+								https://github.com/jaydeepchakraborty/NLP/blob/master/Transformer((seq)%20-_%201).ipynb
+							</p>
+						</ul>
+						<ul>
+							Many - to - Many (seq - seq)
+							<p>
+								https://github.com/jaydeepchakraborty/NLP/blob/master/Transformer((seq)%20-_%20seq).ipynb
+							</p>
+						</ul>
+					</li>
+					<li>
+						Recursive Neural Network
+					</li>
+					<li>
+						Graph Neural Network
+						<ul>
+							Basics | Architecture
+							<p>
+								https://github.com/jaydeepchakraborty/NLP/blob/master/GNN_Introduction.ipynb
+							</p>
+						</ul>
+					</li>
 				</ul>
-
-
-
 			</div>
-
-
 
 	    </div>
     </article> 
