--- a/ml_tutorial.html
+++ b/ml_tutorial.html
@@ -79,7 +79,8 @@
 				  <li><a href="index.html">Home</a></li>
 				  <li><a href="publication.html">Publication</a></li>
 				  <li><a href="projects.html">Projects</a></li>
-				  <li><a href="tutorial.html">Tutorials</a></li>
+				  <li><a href="ml_tutorial.html">ML-Tutorials</a></li>
+				  <li><a href="stat_tutorial.html">Stat-Tutorials</a></li>
 				</ul>
 			</div>
 		    
