--- a/stat_tutorial.html
+++ b/stat_tutorial.html
@@ -88,7 +88,8 @@
 
 			<div class="resume-body p-5">
 				<p>
-					Hypothesis Test
+					Hypothesis Test <br>
+					https://github.com/jaydeepchakraborty/py_stat
 				</p>
 					<ul>
 						Q) How many Samples (Nominal)?
